tests/negative/gold/incomplete-primitive-test.gold
tests/negative/incomplete-primitive-test.toit:6:3: error: Unexpected <illegal>
  #primitive
  ^
tests/negative/incomplete-primitive-test.toit:9:14: error: Incomplete expression
  #primitive.
             ^
tests/negative/incomplete-primitive-test.toit:9:13: error: Missing primitive name
  #primitive.
            ^
tests/negative/incomplete-primitive-test.toit:12:13: error: Missing primitive name
  #primitive.module
            ^~~~~~~
tests/negative/incomplete-primitive-test.toit:12:14: error: Unknown primitive library 'module'

  #primitive.module
             ^~~~~~
tests/negative/incomplete-primitive-test.toit:15:13: error: Missing primitive name
  #primitive.core
            ^~~~~
tests/negative/incomplete-primitive-test.toit:18:13: error: Missing primitive name
  #primitive.intrinsics
            ^~~~~~~~~~~
tests/negative/incomplete-primitive-test.toit:21:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
Compilation failed
